@@ -19,6 +19,7 @@ Bug IDs that start with "K" can be found in the Kenai Bugzilla
 The following bugs have been fixed in the 1.5 release.
 
 K 5682	add FetchProfile.Item.SIZE
+K 5683	fix protected fields in final classes in javax.mail.search
 
 
 		  CHANGES IN THE 1.4.6 RELEASE
